fixing the white space issues

--- a/src/globalStyles.css
+++ b/src/globalStyles.css
@@ -14,6 +14,15 @@
     position: absolute; /* new */
 }
 
+.description {
+  color: white;
+  background: transparent;
+  font-size: 1em;
+  letter-spacing: 0px;
+  left: 18%;
+  top: 60%;
+  text-align: center;
+}
 div#iframe-wrapper iframe {
     position: absolute;
     top: 0;
